Fixed image overflow issue Main Page

--- a/Styles/Startpage.css
+++ b/Styles/Startpage.css
@@ -1,5 +1,7 @@
 body{
     overflow: hidden;
+    height: 100vh;
+    width: 100vw;
 }
 
 #infoCont{
@@ -8,6 +10,7 @@ body{
     left: 10%;
     width: 30%;
     height: 60vh;
+    overflow: hidden;
 }
 
 .text{
